--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h2 class="lh-lg"> Login </h2>
 <form action="{% url 'accounts:login' %}" method="POST">
   {% csrf_token %}
   {{ form.as_p }}
